--- a/about.html
+++ b/about.html
@@ -32,7 +32,11 @@
             <div class="home-detail">
                 <h1>About Me</h1>
                 <p>
-                    Passionate and skilled software developer with a strong foundation in C++, HTML, CSS, and modern development tools. Experienced in building real-world projects, including games, logic engines, and desktop applications, with a focus on clean code, efficiency, and scalability. Known for quick learning, creative problem-solving, and taking initiative in academic and personal projects. Thrive in team environments and committed to delivering high-quality, impactful solutions.
+                    Passionate and skilled software developer with a strong foundation in C++, HTML, CSS, and modern
+                    development tools. Experienced in building real-world projects, including games, logic engines, and
+                    desktop applications, with a focus on clean code, efficiency, and scalability. Known for quick
+                    learning, creative problem-solving, and taking initiative in academic and personal projects. Thrive
+                    in team environments and committed to delivering high-quality, impactful solutions.
                 </p>
             </div>
 
