--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
             <div class="home-detail">
                 <h2>Contact Me</h2>
                 <div class="contact-info">
-                    <p><i class="ri-mail-fill"></i> toheedali3.14159@example.com</p>
+                    <p><i class="ri-mail-fill"></i> toheedali3.14159@gmail.com</p>
                     <p><i class="ri-phone-fill"></i> +92 329 4351003</p>
                     <p><i class="ri-map-pin-fill"></i> Lahore, Pakistan</p>
                 </div>
@@ -57,7 +57,8 @@
 
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea id="message" name="message" placeholder="Write your message here..." required></textarea>
+                        <textarea id="message" name="message" placeholder="Write your message here..."
+                            required></textarea>
                     </div>
 
                     <!-- Hidden field for time -->
