--- a/projects.html
+++ b/projects.html
@@ -28,57 +28,197 @@
             <h1 class="skills-title">Projects</h1>
 
             <div class="skills-marquee">
-                <div class="skills-track">
+                <div class="projects-track">
 
                     <div class="project-box">
                         <img class="project-pic" src="images/tic-tac-toe.png" alt="Tic Tac Toe.png">
                         <h2>Tic Tac Toe</h2>
-                    </div>
-
-                    <div class="project-box">
-                        <img class="project-pic" src="images/chess.jpg" alt="Chess.png">
-                        <h2>Chess</h2>
+                        <div class="project-overlay">
+                            <p>A console-based Tic-Tac-Toe game in Python implementing Minimax and Alpha-Beta Pruning
+                                algorithms for an unbeatable AI opponent.</p>
+                            <a href="https://github.com/Toheed-Ali/Tic-Tac-Toe" target="_blank" class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
                     </div>
 
                     <div class="project-box">
                         <img class="project-pic" src="images/reversi.gif" alt="Reversi.png">
                         <h2>Reversi</h2>
-                    </div>
-
-                    <div class="project-box">
-                        <img class="project-pic" src="images/File Explorer.png" alt="File Explorer.png">
-                        <h2>File Explorer</h2>
-                    </div>
-
-                    <div class="project-box">
-                        <img class="project-pic" src="images/CMS.png" alt="File Explorer.png">
-                        <h2>University Portal</h2>
-                    </div>
-
-                    <div class="project-box">
-                        <img class="project-pic" src="images/tic-tac-toe.png" alt="Tic Tac Toe.png">
-                        <h2>Tic Tac Toe</h2>
+                        <div class="project-overlay">
+                            <p>A graphical Reversi (Othello) game in C++ built with Raylib, featuring smooth flip
+                                animations and an AI opponent powered by Minimax with Alpha-Beta pruning.</p>
+                            <a href="https://github.com/Toheed-Ali/Reversi-Othello" target="_blank" class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
                     </div>
 
                     <div class="project-box">
                         <img class="project-pic" src="images/chess.jpg" alt="Chess.png">
                         <h2>Chess</h2>
+                        <div class="project-overlay">
+                            <p>A console-based Chess game in C++ that follows all standard chess rules, including
+                                castling, en passant, pawn promotion, check, checkmate, and draw conditions.</p>
+                            <a href="https://github.com/Toheed-Ali/chess" target="_blank" class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
                     </div>
 
                     <div class="project-box">
-                        <img class="project-pic" src="images/reversi.gif" alt="Reversi.png">
-                        <h2>Reversi</h2>
-                    </div>
-
-                    <div class="project-box">
-                        <img class="project-pic" src="images/File Explorer.png" alt="File Explorer.png">
+                        <img class="project-pic" src="images/File Explorer.jpg" alt="File Explorer.png">
                         <h2>File Explorer</h2>
+                        <div class="project-overlay">
+                            <p>A console-based Virtual File Explorer in C++ that simulates a file system with
+                                directories, files, and operations like create, edit, copy, paste, and delete.
+                            </p>
+                            <a href="https://github.com/Toheed-Ali/File-Explorer-OOP-project" target="_blank"
+                                class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
                     </div>
 
                     <div class="project-box">
                         <img class="project-pic" src="images/CMS.png" alt="File Explorer.png">
                         <h2>University Portal</h2>
+                        <div class="project-overlay">
+                            <p>Comprehensive university management system with student enrollment, course registration,
+                                and grade tracking. Features role-based access for students and administrators.</p>
+                            <a href="https://github.com/Toheed-Ali/Cloud-Based-Student-Registration" target="_blank"
+                                class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
                     </div>
+
+                    <div class="project-box">
+                        <img class="project-pic" src="images/VisionGo.png" alt="VisionGo.png">
+                        <h2>VisionGo</h2>
+                        <div class="project-overlay">
+                            <p>A Flutter-based smart surveillance app featuring real-time object detection, camera
+                                integration, and security monitoring and Real Time notifications</p>
+                            <a href="https://github.com/Toheed-Ali/VisionGo" target="_blank" class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-box">
+                        <img class="project-pic" src="images/SkillTrade Logo.png" alt="SkillTrade.png">
+                        <h2>SkillTrade</h2>
+                        <div class="project-overlay">
+                            <p>A Flutter-based platform for trading skills and services. Features user profiles, skill
+                                listings, and secure messaging for seamless collaboration.</p>
+                            <a href="https://github.com/Toheed-Ali/SkillTrade" target="_blank" class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <div class="project-box">
+                        <img class="project-pic" src="images/tic-tac-toe.png" alt="Tic Tac Toe.png">
+                        <h2>Tic Tac Toe</h2>
+                        <div class="project-overlay">
+                            <p>A console-based Tic-Tac-Toe game in Python implementing Minimax and Alpha-Beta Pruning
+                                algorithms for an unbeatable AI opponent.</p>
+                            <a href="https://github.com/Toheed-Ali/Tic-Tac-Toe" target="_blank" class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-box">
+                        <img class="project-pic" src="images/reversi.gif" alt="Reversi.png">
+                        <h2>Reversi</h2>
+                        <div class="project-overlay">
+                            <p>A graphical Reversi (Othello) game in C++ built with Raylib, featuring smooth flip
+                                animations and an AI opponent powered by Minimax with Alpha-Beta pruning.</p>
+                            <a href="https://github.com/Toheed-Ali/Reversi-Othello" target="_blank" class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-box">
+                        <img class="project-pic" src="images/chess.jpg" alt="Chess.png">
+                        <h2>Chess</h2>
+                        <div class="project-overlay">
+                            <p>A console-based Chess game in C++ that follows all standard chess rules, including
+                                castling, en passant, pawn promotion, check, checkmate, and draw conditions.</p>
+                            <a href="https://github.com/Toheed-Ali/chess" target="_blank" class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-box">
+                        <img class="project-pic" src="images/File Explorer.jpg" alt="File Explorer.png">
+                        <h2>File Explorer</h2>
+                        <div class="project-overlay">
+                            <p>A console-based Virtual File Explorer in C++ that simulates a file system with
+                                directories, files, and operations like create, edit, copy, paste, and delete.
+                            </p>
+                            <a href="https://github.com/Toheed-Ali/File-Explorer-OOP-project" target="_blank"
+                                class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-box">
+                        <img class="project-pic" src="images/CMS.png" alt="File Explorer.png">
+                        <h2>University Portal</h2>
+                        <div class="project-overlay">
+                            <p>Comprehensive university management system with student enrollment, course registration,
+                                and grade tracking. Features role-based access for students and administrators.</p>
+                            <a href="https://github.com/Toheed-Ali/Cloud-Based-Student-Registration" target="_blank"
+                                class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-box">
+                        <img class="project-pic" src="images/VisionGo.png" alt="VisionGo.png">
+                        <h2>VisionGo</h2>
+                        <div class="project-overlay">
+                            <p>A Flutter-based smart surveillance app featuring real-time object detection, camera
+                                integration, and security monitoring and Real Time notifications</p>
+                            <a href="https://github.com/Toheed-Ali/VisionGo" target="_blank" class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-box">
+                        <img class="project-pic" src="images/SkillTrade Logo.png" alt="SkillTrade.png">
+                        <h2>SkillTrade</h2>
+                        <div class="project-overlay">
+                            <p>A Flutter-based platform for trading skills and services. Features user profiles, skill
+                                listings, and secure messaging for seamless collaboration.</p>
+                            <a href="https://github.com/Toheed-Ali/SkillTrade" target="_blank" class="github-btn">
+                                <i class="ri-github-fill"></i> View on GitHub
+                            </a>
+                        </div>
+                    </div>
+
+
 
                 </div>
             </div>
